<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_15sdp"
    android:elevation="@dimen/_15sdp"
    app:cardElevation="@dimen/_25sdp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/foodImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/splash_screen_background"
            android:scaleType="centerCrop"
            android:transitionName="@string/foodImageTransition"
            />
        <TextView
            android:id="@+id/foodTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            tools:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp"
            android:gravity="center"
            android:textSize="@dimen/_14sdp"
            android:transitionName="@string/foodTitleTransition"
            />
    </LinearLayout>


</androidx.cardview.widget.CardView>