<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Features.View.ViewFood">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"/>
            </com.google.android.material.appbar.AppBarLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:id="@+id/foodImage"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_200sdp"
                        android:src="@drawable/splash_screen_background"
                        android:transitionName="@string/foodImageTransition"
                        />
                    <TextView
                        android:id="@+id/foodTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        tools:text="@string/app_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold"
                        android:padding="@dimen/_5sdp"
                        android:transitionName="@string/foodTitleTransition"
                        />

                    <TextView
                        android:id="@+id/foodRecipe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/app_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12sdp"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_50sdp"
                        />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center|bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/addMobUnitId">
        </com.google.android.gms.ads.AdView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>