<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Features.View.AddFood">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>
        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/foodTitleHint"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:hintTextColor="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/foodTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:imeOptions="actionNext"
                android:singleLine="true"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/foodImageLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/foodImageHint"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark"
                android:layout_marginEnd="@dimen/_2sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/selectFoodImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/foodImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:enabled="false"
                    android:textColor="@color/colorPrimaryDark">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/selectFoodImage"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_folder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/foodImageLayout"
                app:layout_constraintBottom_toBottomOf="@id/foodImageLayout"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/foodRecipeHint"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:hintTextColor="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/foodRecipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorPrimaryDark"
                android:imeOptions="actionNext"
                android:gravity="top"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


</layout>